2011-09-27  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Fix build of WebKit2 unit-tests after r96108

        Reviewed by Andreas Kling.

        * UIProcess/API/qt/tests/tests.pri:

2011-09-23  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Fix build against Qt5 after refactor of widgets out of QtGUi

        QWidget and friends now live in the QtWidgets library. We update
        includes in implementation files and private headers to us the
        non-module-prefixed path, and leave the lookup for the include
        path. For public headers we have to ifdef the includes as the
        user might now have the modules we need in his QT config.

        Finally, QSGCanvas is no longer a QWidget but a QWindow, so we
        have to update our code and use windowHandle() for setting the
        parent relationships.

        https://bugs.webkit.org/show_bug.cgi?id=68687

        Reviewed by Andreas Kling.

        * UIProcess/API/qt/qdesktopwebview.cpp:
        * UIProcess/API/qt/qdesktopwebview.h:
        * UIProcess/API/qt/tests/tests.pro:
        * UIProcess/qt/ViewInterface.h:
        * UIProcess/qt/WebPopupMenuProxyQtDesktop.cpp:

2011-09-26  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        [Qt][WK2] Add support for hover API in Qt WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=68369

        Reviewed by Andreas Kling.

        Based on the patch from Igor Oliveira in the same bug.

        Expose a linkHovered() signal in QDesktopWebView, that passes the QUrl and the
        QString corresponding to the link title. I left textContent out because was
        unsure of its use case.

        In QDesktopWebView we store the last URL and title emitted to make sure we send
        the signal only if either value changes. Tests were added to the QML element to
        check: if values are correctly emitted and if we don't emit more signals than
        necessary.
