@@ -1,3 +1,15 @@
+2011-09-27  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK] Rename WebKit2 GTK+ API main header as webkit2.h
+        https://bugs.webkit.org/show_bug.cgi?id=65178
+
+        Reviewed by Martin Robinson.
+
+        * GNUmakefile.am: Add webkit2.h.
+        * UIProcess/API/gtk/WebKitWebView.h:
+        * UIProcess/API/gtk/webkit2.h: Renamed from Source/WebKit2/UIProcess/API/gtk/webkit/webkit.h.
+        * webkit2gtk.pc.in: Use webkitgtk-<api-version> as include dir.
+
 2011-09-27  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>
 
         [Qt] Fix build of WebKit2 unit-tests after r96108
